--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,6 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index"
@@ -22,5 +21,7 @@
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
